@@ -1,3 +1,9 @@
+2001-07-24  Richard Hestilow  <hestilow@ximian.com>
+	
+	* sound-properties-capplet.c (main): Pass in legacy files to
+	capplet_init.
+	(get_legacy_settings): Use the "Main" config prefix.
+
 2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
 
 	* sound-properties-capplet.c (apply_settings): Make sure ESD gets
